--- a/project.private.config.json
+++ b/project.private.config.json
@@ -3,5 +3,66 @@
     "projectname": "miniprogram",
     "setting": {
         "compileHotReLoad": true
+    },
+    "condition": {
+        "miniprogram": {
+            "list": [
+                {
+                    "name": "button",
+                    "pathName": "pages/button/button",
+                    "query": "",
+                    "scene": null
+                },
+                {
+                    "name": "rate",
+                    "pathName": "pages/rate/rate",
+                    "query": "",
+                    "scene": null
+                },
+                {
+                    "name": "indexes",
+                    "pathName": "pages/indexes/indexes",
+                    "query": "",
+                    "scene": null
+                },
+                {
+                    "name": "swiper",
+                    "pathName": "pages/swiper/swiper",
+                    "query": "",
+                    "scene": null
+                },
+                {
+                    "name": "actionSheet",
+                    "pathName": "pages/action-sheet/action-sheet",
+                    "query": "",
+                    "scene": null
+                },
+                {
+                    "name": "image-viewer",
+                    "pathName": "pages/image-viewer/image-viewer",
+                    "query": "",
+                    "scene": null
+                },
+                {
+                    "name": "search",
+                    "pathName": "pages/search/search",
+                    "query": "",
+                    "scene": null
+                },
+                {
+                    "name": "checkbox",
+                    "pathName": "pages/checkbox/checkbox",
+                    "query": "",
+                    "scene": null
+                },
+                {
+                    "name": "ask",
+                    "pathName": "pages/ask/ask",
+                    "query": "",
+                    "launchMode": "default",
+                    "scene": null
+                }
+            ]
+        }
     }
 }
