--- a/project.private.config.json
+++ b/project.private.config.json
@@ -56,8 +56,8 @@
                     "scene": null
                 },
                 {
-                    "name": "ask",
-                    "pathName": "pages/ask/ask",
+                    "name": "home",
+                    "pathName": "pages/home/home",
                     "query": "",
                     "launchMode": "default",
                     "scene": null
