feat: display versionEnv

--- a/app.json
+++ b/app.json
@@ -26,5 +26,6 @@
         "navigationBarTitleText": "TDesign",
         "navigationBarTextStyle": "black"
     },
-    "sitemapLocation": "sitemap.json"
+    "sitemapLocation": "sitemap.json",
+    "lazyCodeLoading": "requiredComponents"
 }
