--- a/project.config.json
+++ b/project.config.json
@@ -6,28 +6,41 @@
     },
     "setting": {
         "urlCheck": false,
-        "scopeDataCheck": false,
-        "coverView": true,
         "es6": true,
+        "enhance": false,
         "postcss": true,
-        "compileHotReLoad": false,
         "preloadBackgroundData": false,
         "minified": true,
-        "autoAudits": false,
         "newFeature": true,
-        "uglifyFileName": false,
-        "uploadWithSourceMap": true,
-        "useIsolateContext": true,
+        "coverView": true,
         "nodeModules": true,
-        "enhance": false,
-        "useCompilerModule": true,
-        "userConfirmedUseCompilerModuleSwitch": false,
+        "autoAudits": false,
         "showShadowRootInWxmlPanel": true,
+        "scopeDataCheck": false,
+        "uglifyFileName": false,
+        "checkInvalidKey": true,
+        "checkSiteMap": true,
+        "uploadWithSourceMap": true,
+        "compileHotReLoad": false,
+        "lazyloadPlaceholderEnable": false,
+        "useMultiFrameRuntime": true,
+        "useApiHook": true,
+        "useApiHostProcess": true,
         "babelSetting": {
             "ignore": [],
             "disablePlugins": [],
             "outputPath": ""
-        }
+        },
+        "useIsolateContext": true,
+        "userConfirmedBundleSwitch": false,
+        "packNpmManually": false,
+        "packNpmRelationList": [],
+        "minifyWXSS": true,
+        "disableUseStrict": false,
+        "minifyWXML": true,
+        "showES6CompileOption": false,
+        "useCompilerPlugins": false,
+        "ignoreUploadUnusedFiles": true
     },
     "compileType": "miniprogram",
     "libVersion": "2.20.2",
@@ -35,6 +48,10 @@
     "projectname": "TDesign",
     "simulatorType": "wechat",
     "simulatorPluginLibVersion": {},
+    "editorSetting": {
+        "tabIndent": "insertSpaces",
+        "tabSize": 4
+    },
     "condition": {
         "miniprogram": {
             "list": [
@@ -88,9 +105,5 @@
                 }
             ]
         }
-    },
-    "editorSetting": {
-        "tabIndent": "insertSpaces",
-        "tabSize": 4
     }
 }
