--- a/project.private.config.json
+++ b/project.private.config.json
@@ -63,9 +63,9 @@
                     "scene": null
                 },
                 {
-                    "name": "周报生成器",
+                    "name": "Websocket",
                     "pathName": "pages/tool/tool",
-                    "query": "id=4",
+                    "query": "id=101",
                     "launchMode": "default",
                     "scene": null
                 },
@@ -80,6 +80,13 @@
                     "name": "list",
                     "pathName": "pages/list/list",
                     "query": "",
+                    "launchMode": "default",
+                    "scene": null
+                },
+                {
+                    "name": "工作日报",
+                    "pathName": "pages/tool/tool",
+                    "query": "id=104",
                     "launchMode": "default",
                     "scene": null
                 }
