--- a/project.config.json
+++ b/project.config.json
@@ -50,7 +50,7 @@
     },
     "compileType": "miniprogram",
     "libVersion": "2.20.2",
-    "appid": "wx0bf222486deeda3f",
+    "appid": "wx7511c14138806f27",
     "projectname": "TDesign",
     "simulatorType": "wechat",
     "simulatorPluginLibVersion": {},
